--- a/index1.html
+++ b/index1.html
@@ -50,19 +50,22 @@
         <div class="row h-100">
           <div class="col-12 my-auto">
             <div class="masthead-content text-white py-5 py-md-0">
-              <div style="margin: 0px 0px 55px 50px">
+              <p class="mb-5">
                 <img
                   src="./img/logo_evartel_labeled_wht.svg"
                   alt="evartel.com"
                   width="300px"
                 />
-              </div>
+              </p>
               <h1 class="mb-3">Coming Soon!</h1>
               <p class="mb-5">
                 We're working hard to to bring our products and services to the
                 US market. Stay tuned!
               </p>
-              <div class="input-group input-group-newsletter">
+              <p class="mb-5" style="font-size: smaller">
+                Yes... we believe Bootstrap templates and themes are great too!
+              </p>
+              <!-- <div class="input-group input-group-newsletter">
                 <input
                   type="email"
                   class="form-control"
@@ -79,7 +82,7 @@
                     Notify Me!
                   </button>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -100,7 +103,7 @@
         </li>
         <li class="list-unstyled-item">
           <a href="#">
-            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
           </a>
         </li>
       </ul>
